--- a/package.json
+++ b/package.json
@@ -8,9 +8,9 @@
   "unpkg": "dist/index.umd.js",
   "types": "dist/index.d.ts",
   "scripts": {
-    "build": "microbundle",
-    "dev": "microbundle watch",
-    "prepare": "npm run build",
+    "build": "microbundle --no-sourcemap",
+    "dev": "microbundle watch --no-sourcemap",
+    "prepack": "npm run build",
     "test": "npm run build && node test/index.test.js"
   },
   "files": [
@@ -21,9 +21,10 @@
     "url": "git+https://github.com/CompactJS/limit.git"
   },
   "keywords": [
-    "javascript"
+    "limit",
+    "numbers"
   ],
-  "author": "Timo Bechtel <timo@bechtel.solutions>",
+  "author": "Timo Bechtel",
   "license": "MIT",
   "bugs": {
     "url": "https://github.com/CompactJS/limit/issues"
